--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "webpack-dev-server --open --config webpack.dev.js"
   },
   "dependencies": {
+    "@types/uuid": "^3.4.5",
+    "uuid": "^3.3.3",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0"
   },
