--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "webpack-dev-server --open --config webpack.dev.js"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/uuid": "^3.4.5",
-    "uuid": "^3.3.3",
+    "axios": "^0.19.0",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0"
   },
