--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0"
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-typescript": "^3.11.0",
